--- a/index.css
+++ b/index.css
@@ -1,72 +1,66 @@
 * {
-  /* font-size: 16px; */
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
+
 a,
 li,
 ul {
   list-style: none;
   text-decoration: none;
 }
+
 body {
   background: #ffffff;
   font-family: Avenir, Verdana, Arial;
   font-style: normal;
   max-width: 1400px;
   margin: 0 auto;
-  /* font-size: 1.2em; */
 }
 
 /* ============================= PLP =============================== */
-
 section {
   display: grid;
   grid-template-columns: 25% auto;
   margin: 3em 2.5em 2em 3.6em;
 }
-aside {
-  max-width: 300px;
-  /* margin-right: 1em; */
-  padding-right: 1vw;
-  background-color: violet;
-}
+/* =================== products ================== */
 .products {
   display: grid;
   grid-template-columns: auto auto auto;
-  gap: 1.5em;
+  gap: 2em;
 }
+
 .product {
-  /* position: relative; */
-  min-width: 200px;
+  position: relative;
+  min-width: 170px;
+  padding-bottom: 2em;
 }
+
 .product-image {
-  /* position: relative; */
   width: 100%;
-  /* margin-bottom: -3em; */
+  margin-bottom: -2em;
 }
 
 .product-name {
-  /* margin-top: -1em; */
-  /* position: absolute; */
-  /* top: 70%; */
-  background-color: cyan;
-}
-/* .product-info {
-  position: relative;
-  background-color: beige;
-} */
-/* h4 {
-  position: absolute;
-  top: 70%;
-  background-color: yellow;
+  background-color: white;
   width: 70%;
-} */
+  padding-top: 1.5em;
+}
+
+.product-info {
+  position: relative;
+}
+
 .product-extra-info {
   display: flex;
   justify-content: space-between;
-  /* background-color: gray; */
+  background-color: white;
+}
+
+.product-extra-info > p {
+  padding-top: 1em;
 }
 .product-add-to-cart {
   display: flex;
@@ -75,82 +69,91 @@ aside {
   padding-top: 1em;
 }
 
-/* .sidebar {
-  background-color: green;
-  width: 28em;
-} */
-
-.line {
-  border-bottom: 2px solid #f2f2f2;
-  margin-top: 1em;
+/* ================= sidebar ================ */
+aside {
+  max-width: 300px;
+  padding-right: 2vw;
 }
 
-.sidebar-filter-text,
-.product-category-text {
+.gray-text {
   color: gray;
   text-transform: uppercase;
 }
 
-.sidebar p {
-  margin-top: 1.5em;
+input[type="checkbox"] {
+  margin: 1em 0;
 }
 
-.color-filter > input,
 .category-filter,
 .price-filter,
 .collection-filter,
 .color-filter {
-  margin-top: 1em;
   position: relative;
+  margin-top: 2em;
 }
+
 .filter-arrow-btn {
   position: absolute;
   right: 1em;
   top: 0.5em;
 }
 
-/* .products-container {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: flex-end;
+.line {
+  border-bottom: 2px solid #f2f2f2;
+  margin-top: 1em;
 }
 
-.product {
-  margin: 0 0 3em 2em;
-  position: relative;
-} */
-
-/* .product-name {
-  position: absolute;
-  width: 180px;
-  height: 5em;
-  left: 0;
-  top: 65%;
-  background-color: white;
-  padding-top: 1.2em;
+.slider-container {
+  width: 100%;
 }
 
-.product-price {
-  position: absolute;
-  right: 0;
-  top: 77%;
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 25px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
 }
 
-.product-add-to-cart > img {
-  position: absolute;
-  right: 0;
-  bottom: 0;
+.slider:hover {
+  opacity: 1;
 }
 
-.product-image img {
-  width: 275px;
-  height: 235px;
-  margin-bottom: 5.1em;
-}  */
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: #4caf50;
+  border-radius: 50%;
+  cursor: pointer;
+}
 
-/* ============================= PLP ============================== */
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #4caf50;
+  cursor: pointer;
+}
 
-/* Main Page */
+/* =============== pagination =============== */
+.pagination {
+  margin: 0 5em;
+}
+.page {
+  display: inline-block;
+  margin: 3em;
+  padding: 2px 7px 2px 7px;
+  background-color: green;
+  color: white;
+}
+
+/* ============================= PLP =============================== */
+
+/* =========================== Main Page =========================== */
 .carousel-container {
   overflow: hidden;
   width: 100%;
@@ -163,22 +166,24 @@ aside {
 
 .carousel-text {
   position: absolute;
-  /* width: 1326px;
-  height: 560px; */
   top: 20%;
   left: 7%;
   color: #ffffff;
   background: rgba(0, 0, 0, 0.2);
 }
+
 .carousel-text > h1 {
   font-size: 2.7em;
 }
+
 .carousel-text > p {
   text-decoration: underline;
   font-style: normal;
   font-weight: normal;
   font-size: 26px;
+  margin: 1em 0;
 }
+
 .carousel > img {
   max-width: 100%;
   /* padding-top: 3em; */
@@ -213,21 +218,57 @@ select {
   right: 1px;
   width: 34vw;
   height: 7vh;
-  padding: 10px;
+  padding: 8px;
   margin: 8px 0px 0px 0px;
   font-size: 1.1em;
-  line-height: 1;
+  line-height: 1.5;
   border: none;
   border-bottom: 2px solid #f2f2f2;
   background: url(images/Arrow.png) no-repeat right #ffffff;
   -webkit-appearance: none;
   background-position-x: 30vw;
 }
+/* =========================== Main Page =========================== */
 
-/* header-footer for all pages */
-.list-item > a:active {
-  color: green;
+/* ============================ PDP ================================ */
+.main-pdp {
+  display: flex;
+  background-color: beige;
+  margin: 6em 3em 0 3em;
 }
+
+.pdp-wrapper {
+  display: flex;
+  /* margin: 6em auto; */
+  background-color: burlywood;
+}
+.pdp-carousel-container {
+  display: flex;
+  align-content: flex-end;
+}
+
+.pdp-carousel-container > img {
+  width: 100%;
+}
+
+.pdp-product-description {
+  background-color: #ff4;
+  margin: 0 1em;
+}
+
+.pdp-smaller-text {
+  font-size: 0.7em;
+  font-weight: lighter;
+}
+
+.dispatch-info {
+  text-transform: uppercase;
+  font-size: 0.8em;
+}
+/* =================== header-footer for all pages ================== */
+/* .list-item > a:active {
+  color: green;
+} */
 
 header {
   margin: 2em 2.5em 2em 3.6em;
@@ -272,3 +313,4 @@ footer {
   margin: 2em 10em 5em 10em;
   font-size: 0.9em;
 }
+/* =================== header-footer for all pages ================== */
