--- a/index.css
+++ b/index.css
@@ -147,7 +147,7 @@ input[type="checkbox"] {
   display: inline-block;
   margin: 3em;
   padding: 2px 7px 2px 7px;
-  background-color: green;
+  background-color: #00c98d;
   color: white;
 }
 
@@ -169,7 +169,7 @@ input[type="checkbox"] {
   top: 20%;
   left: 7%;
   color: #ffffff;
-  background: rgba(0, 0, 0, 0.2);
+  /* background: rgba(0, 0, 0, 0.2); */
 }
 
 .carousel-text > h1 {
@@ -181,11 +181,13 @@ input[type="checkbox"] {
   font-style: normal;
   font-weight: normal;
   font-size: 26px;
-  margin: 1em 0;
+  margin: 0.4em 0;
 }
 
 .carousel > img {
   max-width: 100%;
+  filter: brightness(80%);
+
   /* padding-top: 3em; */
 }
 
@@ -232,43 +234,129 @@ select {
 
 /* ============================ PDP ================================ */
 .main-pdp {
-  display: flex;
-  background-color: beige;
-  margin: 6em 3em 0 3em;
+  /* display: flex; */
+  /* background-color: beige; */
+  /* margin: 6em 3em 0 3em; */
 }
 
 .pdp-wrapper {
   display: flex;
-  /* margin: 6em auto; */
-  background-color: burlywood;
-}
-.pdp-carousel-container {
-  display: flex;
-  align-content: flex-end;
+  justify-content: center;
+  margin: 6em 3em 0 3em;
 }
 
-.pdp-carousel-container > img {
+.pdp-images-container {
+  /* width: 60vw; */
+  min-width: 400px;
+}
+
+.pdp-carousel > img {
   width: 100%;
 }
 
+.pdp-small-images {
+  margin-top: 3em;
+  /* display: flex;
+  flex-wrap: nowrap; */
+}
+.pdp-small-images > img {
+  padding-right: 1em;
+}
+
+.pdp-arrow {
+  margin-bottom: 0.3em;
+  padding: 0.2em;
+}
+
 .pdp-product-description {
-  background-color: #ff4;
   margin: 0 1em;
+  width: 25vw;
+  /* min-width: 200px; */
 }
 
 .pdp-smaller-text {
   font-size: 0.7em;
-  font-weight: lighter;
+  font-weight: 300;
+  margin: 1em 0;
+  padding-right: 3em;
 }
 
-.dispatch-info {
-  text-transform: uppercase;
-  font-size: 0.8em;
+.pdp-product-price {
+  margin-top: 1.3em;
 }
+
+.pdp-dispatch-info {
+  text-transform: uppercase;
+  font-size: 0.7em;
+  font-weight: 300;
+  margin: 0.5em 0;
+}
+
+.pdp-red-text {
+  color: red;
+}
+
+.pdp-colors {
+  /* background-color: cadetblue; */
+  margin: 2em 0;
+  /* padding: 1em; */
+}
+
+.color {
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  margin: 0 0.3em;
+}
+
+.color1 {
+  background-color: #c4c4c4;
+  border: 1px solid #070707;
+}
+
+.color2 {
+  background-color: #1b1b1b;
+}
+
+.color3 {
+  background-color: #818347;
+}
+
+.color4 {
+  background-color: #1e0760;
+}
+
+.pdp-add-to-cart-button {
+  width: 264px;
+  height: 47px;
+  margin-top: 0.5em;
+  border: 1px solid #131313;
+  background-color: #131313;
+  color: white;
+  font-size: 0.8em;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+}
+
+.pdp-details-button {
+  width: 264px;
+  height: 35px;
+  margin: 1.2em 0;
+  border: 1px solid #131313;
+  font-size: 0.7em;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  background-image: url(./images/pdp-arrow.png);
+  background-position-x: 18.5vw;
+  background-position-y: 1.5vh;
+  background-repeat: no-repeat;
+}
+
 /* =================== header-footer for all pages ================== */
-/* .list-item > a:active {
-  color: green;
-} */
+header a:any-link {
+  color: black;
+}
 
 header {
   margin: 2em 2.5em 2em 3.6em;
