--- a/index.css
+++ b/index.css
@@ -446,7 +446,7 @@ section.range-slider input {
   overflow: hidden;
   left: 0;
   top: 15px;
-  width: 200px;
+  width: 20vw;
   outline: none;
   height: 18px;
   /* margin: 0;
