--- a/index.css
+++ b/index.css
@@ -53,6 +53,8 @@ section {
   background-color: white;
   width: 70%;
   padding-top: 1.5em;
+  font-size: 1.1em;
+  font-weight: 800;
 }
 
 .product-info {
@@ -68,6 +70,7 @@ section {
 .product-extra-info > p {
   padding-top: 1em;
 }
+
 .product-add-to-cart {
   display: flex;
   justify-content: flex-end;
@@ -79,11 +82,14 @@ section {
 aside {
   max-width: 300px;
   padding-right: 2vw;
+  margin-right: 2em;
+  /* background-color: darkgrey; */
 }
-
+/* for product-type and filter text */
 .gray-text {
   color: gray;
   text-transform: uppercase;
+  font-size: 0.75em;
 }
 
 input[type="checkbox"] {
@@ -95,14 +101,13 @@ input[type="checkbox"] {
 .collection-filter,
 .color-filter {
   position: relative;
-  margin-top: 2em;
+  margin-top: 1.5em;
 }
 
 .filter-arrow-btn {
   position: absolute;
   right: 0.5em;
   top: 0em;
-  /* background-color: darkgreen; */
   padding: 0.5em 0.7em 0 15em;
 }
 
@@ -112,42 +117,7 @@ input[type="checkbox"] {
 }
 
 .options {
-  margin-top: 2em;
-}
-.slider-container {
-  width: 100%;
-}
-
-.slider {
-  -webkit-appearance: none;
-  width: 100%;
-  height: 25px;
-  background: #d3d3d3;
-  outline: none;
-  opacity: 0.7;
-  -webkit-transition: 0.2s;
-  transition: opacity 0.2s;
-}
-
-.slider:hover {
-  opacity: 1;
-}
-
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 25px;
-  height: 25px;
-  background: #4caf50;
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-.slider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
-  background: #4caf50;
-  cursor: pointer;
+  margin-top: 1em;
 }
 
 .collapsed {
@@ -161,9 +131,9 @@ input[type="checkbox"] {
   flex-direction: row;
   justify-content: flex-start;
   cursor: pointer;
-  /* background-color: darkgray; */
   margin: 2em 0;
 }
+
 .page {
   margin-right: 6em;
   display: flex;
@@ -186,6 +156,7 @@ input[type="checkbox"] {
   width: 100%;
   box-sizing: border-box;
 }
+
 .carousel {
   position: relative;
   margin: 0 57px 0 57px;
@@ -196,7 +167,6 @@ input[type="checkbox"] {
   top: 20%;
   left: 7%;
   color: #ffffff;
-  /* background: rgba(0, 0, 0, 0.2); */
 }
 
 .carousel-text > h1 {
@@ -260,11 +230,6 @@ select {
 /* =========================== Main Page =========================== */
 
 /* ============================ PDP ================================ */
-.main-pdp {
-  /* display: flex; */
-  /* background-color: beige; */
-  /* margin: 6em 3em 0 3em; */
-}
 
 .pdp-wrapper {
   display: flex;
@@ -324,9 +289,7 @@ select {
 }
 
 .pdp-colors {
-  /* background-color: cadetblue; */
   margin: 2em 0;
-  /* padding: 1em; */
 }
 
 .color {
@@ -388,6 +351,7 @@ header a:any-link {
 header {
   margin: 2em 2.5em 2em 3.6em;
 }
+
 header,
 footer {
   display: flex;
@@ -399,6 +363,7 @@ footer {
   text-transform: uppercase;
   color: #22232b;
 }
+
 .header-left li,
 .footer-nav li {
   margin-right: 1.5em;
@@ -415,6 +380,26 @@ footer {
 .footer-icons li {
   display: inline-block;
 }
+
+.cart-image {
+  position: relative;
+}
+
+#cartQuantity {
+  position: absolute;
+  bottom: 1.8em;
+  left: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 1.7em;
+  width: 1.7em;
+  border-radius: 50%;
+  background: #00c98d;
+  color: white;
+  font-size: 0.8em;
+}
+
 #login {
   font-size: 0.9em;
   text-transform: uppercase;
@@ -424,13 +409,14 @@ footer {
   color: gray;
   border-bottom: 2px solid #f2f2f2;
 }
+
 footer {
   margin: 2em 10em 5em 10em;
   font-size: 0.9em;
 }
 /* =================== header-footer for all pages ================== */
 
-section.range-slider {
+.slider-container {
   margin: 0;
   padding: 0;
   background-color: darkgoldenrod;
@@ -440,27 +426,25 @@ section.range-slider {
   text-align: center;
 }
 
-section.range-slider input {
+.slider-container input {
   pointer-events: none;
   position: absolute;
   overflow: hidden;
   left: 0;
   top: 15px;
-  width: 20vw;
+  width: 23vw;
   outline: none;
   height: 18px;
-  /* margin: 0;
-  padding: 0; */
 }
 
-section.range-slider input::-webkit-slider-thumb {
+.slider-container input::-webkit-slider-thumb {
   pointer-events: all;
   position: relative;
   z-index: 1;
-  /* outline: 0; */
+  outline: 0;
 }
 
-section.range-slider input::-moz-range-thumb {
+.slider-container-moz-range-thumb {
   pointer-events: all;
   position: relative;
   z-index: 10;
@@ -468,17 +452,103 @@ section.range-slider input::-moz-range-thumb {
   width: 9px;
 }
 
-section.range-slider input::-moz-range-track {
+.slider-container input::-moz-range-track {
   position: relative;
   z-index: -1;
   background-color: rgba(0, 0, 0, 1);
   border: 0;
 }
-section.range-slider input:last-of-type::-moz-range-track {
+.slider-container input:last-of-type::-moz-range-track {
   -moz-appearance: none;
   background: none transparent;
   border: 0;
 }
-section.range-slider input[type="range"]::-moz-focus-outer {
+.slider-container input[type="range"]::-moz-focus-outer {
   border: 0;
 }
+
+/* input[type="range"].myslider {
+  -webkit-appearance: none;
+  width: 100%;
+  margin: 7px 0;
+}
+input[type="range"].myslider:focus {
+  outline: none;
+}
+input[type="range"].myslider::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 1px;
+  cursor: pointer;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  background: rgba(128, 128, 128, 0.47);
+  border-radius: 5.9px;
+  border: 0px solid #ffffb2;
+}
+input[type="range"].myslider::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  border: 1px solid #000000;
+  height: 15px;
+  width: 15px;
+  border-radius: 25px;
+  background: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -7px;
+}
+input[type="range"].myslider:focus::-webkit-slider-runnable-track {
+  background: rgba(128, 128, 128, 0.47);
+}
+input[type="range"].myslider::-moz-range-track {
+  width: 100%;
+  height: 1px;
+  cursor: pointer;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  background: rgba(128, 128, 128, 0.47);
+  border-radius: 5.9px;
+  border: 0px solid #ffffb2;
+}
+input[type="range"].myslider::-moz-range-thumb {
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  border: 1px solid #000000;
+  height: 15px;
+  width: 15px;
+  border-radius: 25px;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type="range"].myslider::-ms-track {
+  width: 100%;
+  height: 1px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type="range"].myslider::-ms-fill-lower {
+  background: rgba(128, 128, 128, 0.47);
+  border: 0px solid #ffffb2;
+  border-radius: 11.8px;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+}
+input[type="range"].myslider::-ms-fill-upper {
+  background: rgba(128, 128, 128, 0.47);
+  border: 0px solid #ffffb2;
+  border-radius: 11.8px;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+}
+input[type="range"].myslider::-ms-thumb {
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  border: 1px solid #000000;
+  height: 15px;
+  width: 15px;
+  border-radius: 25px;
+  background: #ffffff;
+  cursor: pointer;
+  height: 1px;
+}
+input[type="range"].myslider:focus::-ms-fill-lower {
+  background: rgba(128, 128, 128, 0.47);
+}
+input[type="range"].myslider:focus::-ms-fill-upper {
+  background: rgba(128, 128, 128, 0.47);
+} */
