--- a/index.css
+++ b/index.css
@@ -24,13 +24,93 @@ body {
   margin: 0 auto;
 }
 
-/* ============================= PLP =============================== */
+/* ==================================== Sorting ======================================== */
+div.inputs {
+  position: relative;
+  margin: 0 57px 0 57px;
+  margin-bottom: 3em;
+}
+
+input[type="text"] {
+  width: 50vw;
+  height: 7vh;
+  padding: 10px 10px 10px 34px;
+  margin: 8px 10px 8px 0;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 2px solid #f2f2f2;
+  background-color: #ffffff;
+  background-image: url(images/Search.png);
+  background-position-x: 1vw;
+  background-position-y: 1vh;
+  background-repeat: no-repeat;
+  font-size: 1.1em;
+}
+
+input[type="text"]:focus {
+  outline: none;
+}
+
+select {
+  box-sizing: border-box;
+  position: absolute;
+  right: 1px;
+  width: 34vw;
+  height: 7vh;
+  padding: 8px;
+  margin: 8px 0px 0px 0px;
+  font-size: 1.1em;
+  line-height: 1.5;
+  border: none;
+  border-bottom: 2px solid #f2f2f2;
+  background: url(images/Arrow.png) no-repeat right #ffffff;
+  -webkit-appearance: none;
+  background-position-x: 30vw;
+}
+
+/* =================================== Main Page =================================== */
+.carousel-container {
+  overflow: hidden;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.carousel {
+  position: relative;
+  margin: 0 57px 0 57px;
+}
+
+.carousel-text {
+  position: absolute;
+  top: 20%;
+  left: 7%;
+  color: #ffffff;
+}
+
+.carousel-text > h1 {
+  font-size: 2.7em;
+}
+
+.carousel-text > p {
+  text-decoration: underline;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 26px;
+  margin: 0.4em 0;
+}
+
+.carousel > img {
+  max-width: 100%;
+  filter: brightness(80%);
+}
+
+/* ============================= Product Listing Page =============================== */
 section {
   display: grid;
   grid-template-columns: 25% auto;
   margin: 3em 2.5em 2em 3.6em;
 }
-/* =================== products ================== */
+/* =================== PLP products ================== */
 .products {
   display: grid;
   grid-template-columns: auto auto auto;
@@ -78,12 +158,11 @@ section {
   padding-top: 1em;
 }
 
-/* ================= sidebar ================ */
+/* ================= PLP sidebar ================ */
 aside {
   max-width: 300px;
   padding-right: 2vw;
-  margin-right: 2em;
-  /* background-color: darkgrey; */
+  margin-right: 1em;
 }
 /* for product-type and filter text */
 .gray-text {
@@ -125,7 +204,59 @@ input[type="checkbox"] {
   /* add animation */
 }
 
-/* =============== pagination =============== */
+/* ====================== Price-Slider ===================== */
+.slider-container {
+  position: relative;
+}
+
+.slider-container span {
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  top: 3em;
+}
+
+input[type="range"] {
+  -webkit-appearance: none;
+  width: 100%;
+  margin: 1.5em 0;
+  pointer-events: none;
+  position: absolute;
+  left: 0;
+  top: 15px;
+  height: 1.5em;
+}
+
+input[type="range"]:focus {
+  outline: none;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 1px;
+  cursor: pointer;
+  background: rgba(128, 128, 128, 0.47);
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  border: 1px solid #000000;
+  height: 1.3em;
+  width: 1.3em;
+  border-radius: 50%;
+  background: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -7px;
+  pointer-events: all;
+  position: relative;
+  z-index: 1;
+}
+
+.slider-max-text {
+  right: 0;
+}
+
+/* =============== PLP pagination =============== */
 .pagination {
   display: flex;
   flex-direction: row;
@@ -148,88 +279,7 @@ input[type="checkbox"] {
   height: 42px;
 }
 
-/* ============================= PLP =============================== */
-
-/* =========================== Main Page =========================== */
-.carousel-container {
-  overflow: hidden;
-  width: 100%;
-  box-sizing: border-box;
-}
-
-.carousel {
-  position: relative;
-  margin: 0 57px 0 57px;
-}
-
-.carousel-text {
-  position: absolute;
-  top: 20%;
-  left: 7%;
-  color: #ffffff;
-}
-
-.carousel-text > h1 {
-  font-size: 2.7em;
-}
-
-.carousel-text > p {
-  text-decoration: underline;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 26px;
-  margin: 0.4em 0;
-}
-
-.carousel > img {
-  max-width: 100%;
-  filter: brightness(80%);
-
-  /* padding-top: 3em; */
-}
-
-div.inputs {
-  position: relative;
-  /* background-color: teal; */
-  margin: 0 57px 0 57px;
-  margin-bottom: 3em;
-}
-
-input[type="text"] {
-  width: 50vw;
-  height: 7vh;
-  padding: 10px 10px 10px 34px;
-  margin: 8px 10px 8px 0;
-  box-sizing: border-box;
-  border: none;
-  border-bottom: 2px solid #f2f2f2;
-  background-color: #ffffff;
-  background-image: url(images/Search.png);
-  background-position-x: 1vw;
-  background-position-y: 1vh;
-  background-repeat: no-repeat;
-  font-size: 1.1em;
-}
-
-select {
-  box-sizing: border-box;
-  position: absolute;
-  right: 1px;
-  width: 34vw;
-  height: 7vh;
-  padding: 8px;
-  margin: 8px 0px 0px 0px;
-  font-size: 1.1em;
-  line-height: 1.5;
-  border: none;
-  border-bottom: 2px solid #f2f2f2;
-  background: url(images/Arrow.png) no-repeat right #ffffff;
-  -webkit-appearance: none;
-  background-position-x: 30vw;
-}
-/* =========================== Main Page =========================== */
-
-/* ============================ PDP ================================ */
+/* ============================ Product Details Page ================================ */
 
 .pdp-wrapper {
   display: flex;
@@ -238,7 +288,6 @@ select {
 }
 
 .pdp-images-container {
-  /* width: 60vw; */
   min-width: 400px;
 }
 
@@ -343,7 +392,7 @@ select {
   background-repeat: no-repeat;
 }
 
-/* =================== header-footer for all pages ================== */
+/* ============================ Header-Footer for all pages ================================ */
 header a:any-link {
   color: black;
 }
@@ -413,114 +462,4 @@ footer {
 footer {
   margin: 2em 10em 5em 10em;
   font-size: 0.9em;
-}
-/* =================== header-footer for all pages ================== */
-
-.slider-container {
-  margin: 0;
-  padding: 0;
-  background-color: darkgoldenrod;
-  position: relative;
-  width: 20vw;
-  height: 45px;
-  /* text-align: center; */
-}
-
-.slider-container input {
-  pointer-events: none;
-  position: absolute;
-  overflow: hidden;
-  left: 0;
-  top: 15px;
-  width: 23vw;
-  height: 18px;
-}
-
-input[type="range"].myslider {
-  -webkit-appearance: none;
-  width: 100%;
-  margin: 7px 0;
-}
-input[type="range"].myslider:focus {
-  outline: none;
-}
-input[type="range"].myslider::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 1px;
-  cursor: pointer;
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-  background: rgba(128, 128, 128, 0.47);
-  border-radius: 5.9px;
-  border: 0px solid #ffffb2;
-}
-input[type="range"].myslider::-webkit-slider-thumb {
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-  border: 1px solid #000000;
-  height: 15px;
-  width: 15px;
-  border-radius: 25px;
-  background: #ffffff;
-  cursor: pointer;
-  -webkit-appearance: none;
-  margin-top: -7px;
-  pointer-events: all;
-  position: relative;
-  z-index: 1;
-}
-input[type="range"].myslider:focus::-webkit-slider-runnable-track {
-  background: rgba(128, 128, 128, 0.47);
-}
-input[type="range"].myslider::-moz-range-track {
-  width: 100%;
-  height: 1px;
-  cursor: pointer;
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-  background: rgba(128, 128, 128, 0.47);
-  border-radius: 5.9px;
-  border: 0px solid #ffffb2;
-}
-input[type="range"].myslider::-moz-range-thumb {
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-  border: 1px solid #000000;
-  height: 15px;
-  width: 15px;
-  border-radius: 25px;
-  background: #ffffff;
-  cursor: pointer;
-}
-input[type="range"].myslider::-ms-track {
-  width: 100%;
-  height: 1px;
-  cursor: pointer;
-  background: transparent;
-  border-color: transparent;
-  color: transparent;
-}
-input[type="range"].myslider::-ms-fill-lower {
-  background: rgba(128, 128, 128, 0.47);
-  border: 0px solid #ffffb2;
-  border-radius: 11.8px;
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-}
-input[type="range"].myslider::-ms-fill-upper {
-  background: rgba(128, 128, 128, 0.47);
-  border: 0px solid #ffffb2;
-  border-radius: 11.8px;
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-}
-input[type="range"].myslider::-ms-thumb {
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-  border: 1px solid #000000;
-  height: 15px;
-  width: 15px;
-  border-radius: 25px;
-  background: #ffffff;
-  cursor: pointer;
-  height: 1px;
-}
-input[type="range"].myslider:focus::-ms-fill-lower {
-  background: rgba(128, 128, 128, 0.47);
-}
-input[type="range"].myslider:focus::-ms-fill-upper {
-  background: rgba(128, 128, 128, 0.47);
 }
