--- a/index.css
+++ b/index.css
@@ -70,14 +70,15 @@ select {
 
 /* =================================== Main Page =================================== */
 .carousel-container {
-  overflow: hidden;
   width: 100%;
-  box-sizing: border-box;
+  overflow: hidden;
+  /* box-sizing: border-box; */
 }
 
 .carousel {
   position: relative;
   margin: 0 57px 0 57px;
+  overflow: hidden;
 }
 
 .carousel-text {
@@ -99,9 +100,32 @@ select {
   margin: 0.4em 0;
 }
 
-.carousel > img {
+.carousel img {
   max-width: 100%;
   filter: brightness(80%);
+}
+
+.carousel-button {
+  position: absolute;
+  top: 30%;
+  left: 30%;
+}
+
+.slide-hidden {
+  position: absolute;
+  transform: translateX(100%);
+  /* display: none; */
+}
+
+.slide-disappear {
+  position: absolute;
+  transform: translateX(-100%);
+  transition: 1s;
+}
+
+.slide-visible {
+  transition: 1s;
+  transform: translateX(0);
 }
 
 /* ============================= Product Listing Page =============================== */
@@ -188,10 +212,6 @@ input[type="checkbox"] {
   right: 0.5em;
   top: 0em;
   padding: 0.5em 0.7em 0 15em;
-}
-
-.expandButton,
-.expandable {
 }
 
 .line {
@@ -413,8 +433,6 @@ input[type="range"]::-webkit-slider-thumb {
   background-repeat: no-repeat;
 }
 
-.green-button {
-}
 /* ============================ Header-Footer for all pages ================================ */
 header a:any-link {
   color: black;
