--- a/mobile.css
+++ b/mobile.css
@@ -1,8 +1,35 @@
-@media only screen and (max-width: 600px) {
-  #sorting {
+@media only screen and (max-width: 500px) {
+  #sorting,
+  #login,
+  .header-left li + li {
     display: none;
   }
 
+  .cart-image {
+    position: absolute;
+    right: 30%;
+  }
+
+  .logo {
+    width: 70%;
+  }
+
+  /*logo*/
+  .header-left:first-child {
+    position: absolute;
+    right: 2%;
+    top: 4.5%;
+  }
+
+  input[type="text"] {
+    width: 74vw;
+    height: 7vh;
+    padding: 10px 10px 10px 37px;
+    margin: 0 auto;
+    font-size: 1em;
+  }
+
+  /* ============================== main page ============================= */
   .carousel {
     margin: 0;
     width: 150%;
@@ -13,6 +40,32 @@
   }
   .carousel-text > p {
     font-size: 1.3em;
+  }
+
+  /* ========================= Product Listing Page  ========================== */
+  section {
+    margin: 0;
+    padding: 1em;
+  }
+
+  .products {
+    display: flex;
+    flex-flow: column wrap;
+    width: 85vw;
+    justify-content: center;
+    padding: 1.5em 0 1.5em 1.7em;
+  }
+
+  .product {
+    margin: 1em 1em 1em 1em;
+  }
+
+  .product-image {
+    margin-bottom: -2.4em;
+  }
+
+  aside {
+    display: none;
   }
 
   footer {
