--- a/index.css
+++ b/index.css
@@ -287,7 +287,7 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 /* =============== PLP pagination =============== */
-.pagination {
+ul.pagination {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
